--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 server.port=9090
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://15.165.120.8:3306/shop?serverTimezone=Asia/Seoul
+spring.datasource.username=root
+spring.datasource.password=3509
+
+#???? sql ???
+spring.jpa.properties.hibernate.show_sql=true
+#sql ??? ?? ???
+spring.jpa.properties.hibernate.format_sql=true
+#db ??? ??. ?? ??? ?? ? ??
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
